feature: add class method

--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>canvas</title>
     <script src="./src/index.js"></script>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        #canvas{
+            width: 100vw;
+            height: 100vh;
+        }
+    </style>
 </head>
 <body>
-    canvas
+    <canvas id="canvas"></canvas>
 </body>
 </html>
